fdo#56583 - avoid setting user time on unrealized windows.

Change-Id: Iab776088b1d168295d636069e1a92ba948241653